fixed issue with the nav styling on mobile devices

--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -39,7 +39,7 @@
   display: inline-flex;
   align-items: center;
 }
-.nav-btn{
+.nav-search-btn{
   background-color: #f3f2ef;
   font-size: 16px;
   border-radius: 8px;
